# obsidian-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
benches/: benchmarks.rs
examples/: analyzer.rs
src/: error.rs  lib.rs  prelude.rs  test_utils.rs
src/note/: mod.rs  note_aliases.rs  note_default.rs  note_in_memory.rs  note_is_todo.rs  note_on_disk.rs  note_once_cell.rs  note_once_lock.rs  note_read.rs  note_read_write.rs  note_tags.rs  note_write.rs  parser.rs
src/obfile/: mod.rs  obfile_default.rs  obfile_in_memory.rs  obfile_on_disk.rs  obfile_read.rs  obfile_read_write.rs  obfile_write.rs  parser.rs
src/vault/: error.rs  mod.rs  vault_duplicates.rs  vault_get_files.rs  vault_open.rs  vault_petgraph.rs  vault_test.rs
src/vault/vault_open/: mod.rs  options.rs
src/vault/vault_petgraph/: graph_builder.rs  index.rs  mod.rs
