[package]
name = "obsidian-parser"
version = "0.4.0"
edition = "2024"
description = "Blazingly fast Obsidian vault parser with graph analysis"
repository = "https://github.com/CryptoGladi/obsidian-parser"
documentation = "https://docs.rs/obsidian-parser/latest/obsidian_parser"
license = "MIT"
keywords = ["obsidian", "vault", "parser", "knowledge-graph", "graph"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
walkdir = "2.5"
serde_yml = "0.0.12"
ahash = { version = "0.8", optional = true }
log = { version = "0.4", optional = true }
petgraph = { version = "0.8", optional = true }
rayon = { version = "1", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[dev-dependencies]
clap = { version = "4.5.41", features = ["derive"] }
criterion = { version = "0.6.0", features = ["html_reports"] }
env_logger = "0.11.8"
rand = "0.9.1"
tempfile = "3.20.0"

[features]
default = []
all = ["logging", "petgraph", "rayon"]
logging = ["dep:log"]
petgraph = ["dep:petgraph", "dep:ahash"]
rayon = ["dep:rayon", "dep:crossbeam-channel"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[[example]]
name = "analyzer"
required-features = ["petgraph", "logging"]

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
opt-level = 3
lto = 'fat'
codegen-units = 1
overflow-checks = false
